<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center_horizontal"
        tools:ignore="ExtraText">

        <!-- Profile Picture -->
        <ImageView
            android:id="@+id/profileImageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/profile_image"

            android:layout_gravity="center"
            android:layout_marginBottom="16dp"/>

        <!-- Name Input -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/enter_your_name"
            android:inputType="textPersonName"
            android:layout_marginBottom="16dp"/>

        <!-- Year of Birth Input -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/y_o_b"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/yearOfBirthEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/enter_year_you_were_born"
            android:inputType="number"
            android:layout_marginBottom="16dp"/>

        <!-- Terms and Conditions Checkbox -->
        <CheckBox
            android:id="@+id/termsCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accept_terms_and_conditions"
            android:layout_marginBottom="16dp"/>

        <!-- Calculate Age Button -->
        <Button
            android:id="@+id/calculateAgeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculate_age"
            android:backgroundTint="#6200EE"
            android:textColor="#FFFFFF" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>